[gd_scene load_steps=3 format=3 uid="uid://cxpksiphbvug1"]

[ext_resource type="Script" path="res://Scripts/UI/VictoryScreen.gd" id="1_victory"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.15, 0.15, 0.2, 0.95)
border_color = Color(1, 0.8, 0.2, 0.8)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_victory")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.85)

[node name="VictoryPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -350.0
offset_right = 400.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
text = "ПОБЕДА!"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(1, 0.8, 0, 1)

[node name="HSeparator" type="HSeparator" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2

[node name="EnemiesContainer" type="VBoxContainer" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HSeparator2" type="HSeparator" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2

[node name="RewardsContainer" type="VBoxContainer" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HSeparator3" type="HSeparator" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2

[node name="AbilityProgressContainer" type="VBoxContainer" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
visible = false
theme_override_constants/separation = 5

[node name="HSeparator4" type="HSeparator" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
text = "Продолжить"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 1, 1, 1)
custom_minimum_size = Vector2(0, 45)
